src/objects/Apttus_QPConfig__ProposalProductAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class in a proposal line item</description>
    <fields>
        <fullName>Apttus_QPConfig__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LineItemId__c</fullName>
        <description>ID of the associated proposal line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Product Attribute Values</relationshipLabel>
        <relationshipName>ProductAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_expertise__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to calculate pricing for resources under OCE Sales Implementation Bundle.</description>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catergory__c</fullName>
        <description>CPQ-IQ-LC-11078: Used For Amesa price calculation for Product selling based on selection of Category Full or Partial It is also used for Sync Data differentiation.</description>
        <label>Catergory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Delivery_Frequency__c</fullName>
        <description>CPQ-IQ-LC-9425: Used For Amesa price calculation for Product selling selection of frequency monthly, quarterly, semester, half yearly, once.</description>
        <label>Data Delivery Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Seasonal H.Y</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Adhoc Non Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Countries__c</fullName>
        <description>CPQ-IQ-LC-9425: Used For Amesa price calculation for Products selling selection with specific countries.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SA</fullName>
                    <label>Saudi Arabia</label>
                </value>
                <value>
                    <fullName>EG</fullName>
                    <label>Egypt</label>
                </value>
                <value>
                    <fullName>KW</fullName>
                    <label>Kuwait</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                    <label>United Arab Emirates</label>
                </value>
                <value>
                    <fullName>LB</fullName>
                    <label>Lebanon</label>
                </value>
                <value>
                    <fullName>JO</fullName>
                    <label>Jordan</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>MA</fullName>
                    <label>Morocco</label>
                </value>
                <value>
                    <fullName>TN</fullName>
                    <label>Tunisia</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>GA</fullName>
                    <label>Gabon</label>
                </value>
                <value>
                    <fullName>CG</fullName>
                    <label>Congo</label>
                </value>
                <value>
                    <fullName>GN</fullName>
                    <label>Guinea</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>TG</fullName>
                    <label>Togo</label>
                </value>
                <value>
                    <fullName>ML</fullName>
                    <label>Mali</label>
                </value>
                <value>
                    <fullName>BF</fullName>
                    <label>Burkina Faso</label>
                </value>
                <value>
                    <fullName>NE</fullName>
                    <label>Niger</label>
                </value>
                <value>
                    <fullName>CI</fullName>
                    <label>Côte d&apos;Ivoire</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>Cameroon</label>
                </value>
                <value>
                    <fullName>SN</fullName>
                    <label>Senegal</label>
                </value>
                <value>
                    <fullName>FW</fullName>
                    <label>French West Africa</label>
                </value>
                <value>
                    <fullName>ZA</fullName>
                    <label>South Africa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flexible_Territories__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for Sales territorial product data selling for Egypt country.</description>
        <label>Flexible Territories</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CPQ-IQ-LC-10789: Used for Amesa price calculation for product with Generic Plus or not.</description>
        <label>Generic Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to calculate pricing for resources under OCE Sales Implementation Bundle.</description>
        <label>Hours for each resource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICF_Documents_to_Amend__c</fullName>
        <description>CPQ-IQ-LC-13992:Estimated total count of amendments expected during the study.</description>
        <label>ICF Documents to Amend #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <description>CPQ-IQ-LC-13992:No. of unique Languages.</description>
        <label>Languages #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Share__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for calculation of market share % for AMESA data products to derive pricing.</description>
        <label>Market Share %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CPQ-IQ-LC-10789: Used for Amesa price calculation for product.</description>
        <label>National Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Deliveries__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for sales territory data product to provide count of Data delivery fee per month (per Database).</description>
        <label>No. of Deliveries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Lines__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for spotlight data product number of lines counts.</description>
        <label>No. of Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Patient_Videos_to_Amend__c</fullName>
        <description>CPQ-IQ-LC-13992:Minimum Amendments for budget planing.</description>
        <label>No. of Patient Videos to Amend #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Territories__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for sales territory data product to provide selection of number of territories.</description>
        <label>No. of Territories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>148 Territories</fullName>
                </value>
                <value>
                    <fullName>200 Territories</fullName>
                </value>
                <value>
                    <fullName>28 Territories</fullName>
                </value>
                <value>
                    <fullName>29 Territories</fullName>
                </value>
                <value>
                    <fullName>300 Territories</fullName>
                </value>
                <value>
                    <fullName>400 Territories</fullName>
                </value>
                <value>
                    <fullName>500 Territories</fullName>
                </value>
                <value>
                    <fullName>56 Territories</fullName>
                </value>
                <value>
                    <fullName>600 Territories</fullName>
                </value>
                <value>
                    <fullName>66 Territories</fullName>
                </value>
                <value>
                    <fullName>6 Territories</fullName>
                </value>
                <value>
                    <fullName>700 Territories</fullName>
                </value>
                <value>
                    <fullName>70 Territories</fullName>
                </value>
                <value>
                    <fullName>10 Territories</fullName>
                </value>
                <value>
                    <fullName>20 Territories</fullName>
                </value>
                <value>
                    <fullName>40 Territories</fullName>
                </value>
                <value>
                    <fullName>26 Territories</fullName>
                </value>
                <value>
                    <fullName>36 Territories</fullName>
                </value>
                <value>
                    <fullName>46 Territories</fullName>
                </value>
                <value>
                    <fullName>51 Territories</fullName>
                </value>
                <value>
                    <fullName>54 Territories</fullName>
                </value>
                <value>
                    <fullName>57 Territories</fullName>
                </value>
                <value>
                    <fullName>63 Territories</fullName>
                </value>
                <value>
                    <fullName>74 Territories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Lists__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for sales territory data product to provide selection of number of List.</description>
        <label>Number of Lists</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Product_Line__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for spotlight data product number of lines counts for KW and UAE country.</description>
        <label>Number of Product Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Repos_SA__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for spotlight data product number of Repos counts for SA country.</description>
        <label>Number of Repos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Repos__c</fullName>
        <description>CPQ-IQ-LC-9425: Used for Amesa price calculation for spotlight data product number of Repos counts for KW and UAE country.</description>
        <label>Number of Repos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to calculate pricing for resources under OCE Sales Implementation Bundle.</description>
        <label>Number of Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Country__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to store country details for OCE pricing tool.</description>
        <label>Country of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central Africa</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                    <isActive>false</isActive>
                    <label>Cuba</label>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_Zone__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to store Zone details which need to be populated based on Country attribute for OCE pricing tool.</description>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
                <value>
                    <fullName>Zone 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option_Group__c</fullName>
        <description>CPQ-IQ-LC-10789: Used for Amesa Sync functionality to differentiate same product link with different option groups</description>
        <formula>Apttus_QPConfig__LineItemId__r.Apttus_QPConfig__ProductOptionId__r.Apttus_Config2__ProductOptionGroupId__r.Apttus_Config2__OptionGroupId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Comprehension_Quizzes__c</fullName>
        <description>CPQ-IQ-LC-13992:Total count of Quiz based on 5 question under each quiz.</description>
        <label>Participant Comprehension Quizzes #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Education_Glossary_Definitions__c</fullName>
        <description>CPQ-IQ-LC-13992:No. of Patient Education Glossary Definitions(English).</description>
        <label>Patient Education Glossary Definitions #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Videos__c</fullName>
        <description>CPQ-IQ-LC-13992:Total count of English voiceover.</description>
        <label>Patient Videos #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Site__c</fullName>
        <description>CPQ-LC-13992</description>
        <label>Per Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to calculate pricing for resources under OCE Sales Implementation Bundle.</description>
        <label>Location of Resources</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offshore</fullName>
                </value>
                <value>
                    <fullName>Nearshore</fullName>
                </value>
                <value>
                    <fullName>Onshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Tablets__c</fullName>
        <description>CPQ-IQ-LC-13992: Total tablets required for site setup.</description>
        <label>Site Tablets #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <description>CPQ-IQ-LC-9479: Used to calculate pricing for resources under OCE Sales Implementation Bundle.</description>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Niche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Tablets__c</fullName>
        <description>CPQ-IQ-LC-13992:No. of tablets which user can keep in reserve for emergency.</description>
        <label>Sponsor Tablets #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Duration__c</fullName>
        <description>CPQ-IQ-LC-13992:Duration in months of Last Patient Out and Patient In.</description>
        <label>Study Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <description>CPQ-IQ-LC-9425: User for Amesa price calculation for Consumer Partial data products selection.</description>
        <label>Sub Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EG_PAC_N_TRADIT.WOUND HEA DRESSING</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_SURGICAL ABSORBENTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_FIXATIVE TAPES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_BANDAGES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_PLASTERS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_INCONTINENCE CARE PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_BABY DISPOSABLES AND PRODUCTS FOR</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_INJECTION DEVICES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_TEST &amp; MEASURING INSTRUME</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_MEDICAL/SURGICAL AIDS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_CONTACT LENS CARE</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_BABY AND NURSING ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_CONTRACEPTION</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_HOUSEHOLD DISINFECTANTS- INSECTIC</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_TRADIT.WOUND HEA DRESSING</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_SURGICAL ABSORBENTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_FIXATIVE TAPES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_BANDAGES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_PLASTERS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_INCONTINENCE CARE PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_BABY DISPOSABLES AND PRODUCTS FOR</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_INJECTION DEVICES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_TEST &amp; MEASURING INSTRUME</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_MEDICAL/SURGICAL AIDS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_CONTACT LENS CARE</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_BABY AND NURSING ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_CONTRACEPTION</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_HOUSEHOLD DISINFECTANTS- INSECTIC</fullName>
                </value>
                <value>
                    <fullName>EG_PEC_N_FRAGRANCES</fullName>
                </value>
                <value>
                    <fullName>EG_PEC_N_BEAUTY PRODUCTS FOR MEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>CPQ-IQ-LC-9425: User for Amesa price calculation for price calculation for Flexview license subscription type.</description>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CPQ-IQ-LC-9425: User for Amesa price calculation for ATC and OTC codes classification for partial product use.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>National &amp; Sub National</fullName>
                </value>
                <value>
                    <fullName>Sub National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinars_1_hour_session__c</fullName>
        <description>CPQ-IQ-LC-13992:Total count of an hour webinars.</description>
        <label>Webinars (1-hour session) #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>With_CD_DVD_Deliveries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CPQ-IQ-LC-9425: User for Amesa price calculation for product sent with cd/dvd data or not.</description>
        <label>With CD/DVD Deliveries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>With_Molecule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CPQ-IQ-LC-9425: User for Amesa price calculation for product added as additional add on products.</description>
        <label>With Molecule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_day_visits__c</fullName>
        <description>CPQ-IQ-LC-13992:No. of days for On Site Training.</description>
        <label>2-day visits #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proposal Product Attribute Value</label>
    <nameField>
        <displayFormat>VL-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>